# veyyon

./: .gitignore  .keyhog-baseline.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dockerignore  Dockerfile.veybot  Dockerfile.veybot.dockerignore  NOTICE  README.md  SECURITY.md  SUPPORT.md  UPSTREAM.md  biome.json  bunfig.toml  deny.toml  package.json  tsconfig.base.json
.cargo/: audit.toml
.github/: CODEOWNERS  dependabot.yml
assets/: banner.html  veyyon-logo.txt
crates/veyyon-uu-diff/: Cargo.toml
crates/veyyon-uu-diff/src/: lib.rs
crates/veyyon-uu-grep/: Cargo.toml
crates/veyyon-uu-grep/src/: lib.rs  rg.rs
docs/: README.md  advisor-watchdog.md  approval-mode.md  collab.md  compaction.md  config-usage.md  context-files.md  custom-tools.md  environment-variables.md  evals.md  extensions.md  hooks.md  keybindings.md  lsp-config.md  marketplace.md  mcp-config.md  memory.md  models.md  providers.md  python-repl.md  rpc.md  sdk.md  secrets.md  settings.md  skills.md  system-prompt-customization.md  theme.md  tree.md  tui.md
scripts/: analyze_small_edits.py  bash_corpus_stats.jl  check-doc-freshness.test.ts  check-doc-freshness.ts  check-doc-links.test.ts  check-doc-links.ts  check-spoofed-versions.ts  ci-concurrency.test.ts  ci-macos-sign.sh  ci-macos-upload-secrets.sh  ci-release-build-binaries.test.ts  ci-release-build-binaries.ts  ci-release-notes.test.ts  ci-release-notes.ts  ci-release-publish.ts  ci-smoke-source-launch.ts  ci-test-ts.ts  ci-update-brew-formula.test.ts  ci-update-brew-formula.ts  (+41 more)
(+604 files in other folders)
