# grep implemented from scratch on top of the ripgrep libraries (grep-regex +
# grep-searcher), with I/O and path resolution routed through veyyon-uutils-ctx so it
# can run in-process as a shell builtin. Entry point: `veyyon_uu_grep::run`.
[package]
name = "veyyon_uu_grep"
version = "0.8.0"
edition = "2024"
license = "MIT"
description = "grep ~ ripgrep-backed pattern search (in-process shell builtin)"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
veyyon-uutils-ctx = { path = "../veyyon-uutils-ctx" }
veyyon-walker = { path = "../veyyon-walker" }
grep-cli = "0.1"
grep-matcher = "0.1"
grep-pcre2 = "0.1"
grep-printer = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
ignore = "0.4"
globset = "0.4"
serde_json = "1"

[dev-dependencies]
parking_lot.workspace = true
